--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint-config-htmlacademy": "9.0.0",
     "webpack": "5.95.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "5.1.0"
+    "webpack-dev-server": "5.1.0",
+    "html-webpack-plugin": "^5.5.1"
   },
   "engines": {
     "node": "20"
@@ -30,6 +31,5 @@
     "not < 0.25%"
   ],
   "dependencies": {
-    "html-webpack-plugin": "^5.5.1"
   }
 }
