--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "devDependencies": {
     "@babel/core": "7.25.9",
-    "@babel/preset-env": "^7.25.9",
+    "@babel/preset-env": "7.25.9",
     "babel-loader": "9.2.1",
-    "copy-webpack-plugin": "^11.0.0",
+    "copy-webpack-plugin": "11.0.0",
+    "css-loader": "6.7.3",
     "eslint": "8.38.0",
     "eslint-config-htmlacademy": "9.0.0",
-    "html-webpack-plugin": "^5.6.3",
+    "html-webpack-plugin": "5.6.3",
+    "style-loader": "4.0.0",
     "webpack": "5.95.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "webpack-dev-server": "5.1.0"
   },
   "engines": {
     "node": "20"
